# gcal2md

./: .gitignore  README.md  activities_block_template.md  activity_template.md  authentication_test.py  gcal2md.py  md2sq.py  pyproject.toml
modules/: activity_generator.py  activity_updater.py  calendar_fetcher.py  config.py  google_calendar.py  logging.py  utills.py
